# py-ynab-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: todo
docs/ai/: charter.md
docs/ai/archive/api-coverage/: spec.md
docs/ai/archive/category-updates/: spec.md
docs/ai/archive/gh-actions/: spec.md
docs/ai/archive/list-budgets/: spec.md
docs/ai/archive/months/: spec.md
docs/ai/archive/pre-release-fixes/: spec.md
docs/ai/archive/pypi-publish/: spec.md
docs/ai/archive/scheduled-transactions/: spec.md
docs/ai/archive/steelthread/: spec.md
docs/ai/archive/trans-queries/: spec.md
docs/ai/archive/transactions/: spec.md
docs/ai/features/gh-actions/: spec.md
docs/ai/features/pypi-publish/: spec.md
docs/ai/features/steelthread/: spec.md
docs/ai/features/trans-queries/: spec.md
docs/ai/features/transactions/: spec.md
src/py_ynab_mcp/: client.py  models.py  server.py
tests/: test_client.py  test_models.py  test_server.py
