[project]
name = "py-ynab-mcp"
version = "0.2.0"
description = "A Model Context Protocol server for YNAB (You Need A Budget)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "duges" },
]
keywords = ["ynab", "mcp", "budget", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/duganth/py-ynab-mcp"
Repository = "https://github.com/duganth/py-ynab-mcp"
Changelog = "https://github.com/duganth/py-ynab-mcp/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/duganth/py-ynab-mcp/issues"

[project.scripts]
py-ynab-mcp = "py_ynab_mcp.server:main"

[dependency-groups]
dev = [
    "pytest",
    "anyio[trio]",
    "pytest-anyio",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_ynab_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
